--- a/tex/preface.tex
+++ b/tex/preface.tex
@@ -2,7 +2,7 @@
 I begin this preface by providing readers with insights about the background of this Master's thesis.
 It is important to understand this thesis as a first step towards a broader endeavour - as preparatory work for a potential dissertation.
 Hence, this thesis should not be seen as self-contained work but rather as a (hopefully exciting) conceptual foundation that will be further developed and refined in the upcoming years.
-Many aspects of the proposed framework still require clarification or validation through experimental evidence. I kindly ask you, the reader of this thesis, to understand if certain concepts have not yet been fully explored. I hope you can see the value of these ideas and that they will arouse your curiosity.
+Many aspects of the framework proposed in this thesis still require clarification or validation through experimental evidence. I kindly ask you, the reader of this thesis, to understand if certain concepts have not yet been fully explored. I hope you can see the value of these ideas and that they will arouse your curiosity.
 
 Upon successful assessment of this thesis and achieving a satisfactory grade, I am entitled to use the title ``Master of Science''.
 Thus, I should ``master'' science or at least be able to work scientifically.
