--- a/tex/related_work.tex
+++ b/tex/related_work.tex
@@ -1,5 +1,5 @@
 %% related_work.tex
-This chapter presents the related work of the thesis. \secref{alternative_approaches} presents diverse learning frameworks that deviate from the mainstream but might be promising for building more effective learning principles. \secref{natural_intelligence} provides an introduction to a publication titled ``A Theory of Natural Intelligence'' by \citeay{von_der_malsburg_theory_2022}. This work is the main source of inspiration for this thesis and is summarised in detail.
+The related work of the thesis is presented in this chapter. In \secref{alternative_approaches}, diverse learning frameworks are presented that deviate from the mainstream but might be promising for building more effective learning principles. Afterwards, in \secref{natural_intelligence} an introduction to a publication titled ``A Theory of Natural Intelligence'' by \citeay{von_der_malsburg_theory_2022} is provided. This work is the main source of inspiration for this thesis and is summarised in detail.
 This theory can be implemented by combining projection fibres with lateral connections in a self-organising manner. Therefore, projection fibres are summarised in \secref{projection_fibres} and work associated with self-organisation is reviewed in \secref{self_org_related}. Self-organisation is not compatible with end-to-end backpropagation of error. Thus, alternative training algorithms are presented in \secref{alt_train_algo}.
 
 
@@ -55,7 +55,7 @@ Also, sparse coding is used in the thesis as it enhances interpretability and ro
 Besides these adopted principles, other methodologies seem essential for future work. Especially the organisation of internal representations should be investigated further. Promising approaches for organising representations are actionable representations that allow an agent to better understand objects' behaviour under certain transformations and the principles of parsimony and self-consistency.
 
 \section{Natural Intelligence}\seclbl{natural_intelligence}
-This section discusses the theory of natural intelligence by \sideciteay{von_der_malsburg_theory_2022}, which serves as the foundation of this thesis.
+In this section, the theory of natural intelligence proposed by \sideciteay{von_der_malsburg_theory_2022}, which serves as the foundation of this thesis, is discussed.
 The authors point out the massive gap between the amount of information needed to describe the brain's structure (1 PB) and the amount needed to generate it (few GB) \sidecite{mcpherson_physical_2001}. Therefore, the brain must be highly structured \sidecite{gazzaniga_organization_1989, ackerman_discovering_1992, bassett_understanding_2011}
 The theory's authors argue that the ``Kolmogorov algorithm \sidecite{kolmogorov_tables_1998} of the brain''\sidenote{The Kolmogorov complexity describes the number of bits required by the shortest algorithm that can generate a given structure.} builds the neuronal structure by selecting from a set of pre-structured patterns. This aligns with other research that argues that the brain is dominated by similar cell patterns \sidecite{mountcastle_organizing_1978, mountcastle_columnar_1997}.
 Self-organisation is the only mechanism that experiments have not yet disproved as the brains Kolmogorov algorithm \sidecite{willshaw_how_1976, willshaw_marker_1979, singer_brain_1986, kelso_selforganizing_1995, kelso_dynamic_1999}.
@@ -89,7 +89,7 @@ This means that image features extracted by a filter are mapped to a correspondi
 This mapping is inspired by the human brain that maps cell activity in the primary visual cortex \sidecite{tong_primary_2003, grill-spector_human_2004} to transformation- and position-invariant reference objects stored in the 
 temporal cortex \sidecite{miyashita_inferior_1993, conway_organization_2018}.
 The mapping between corresponding cells is done with a particular type of axon called projection fibre \sidecite{greig_molecular_2013}.
-This chapter presents different implementations of projection fibres, while \secref{neuroscience_findings_projection_fibres} discusses biological aspects in more detail. 
+In this section, different implementations of projection fibres are presented, while in \secref{neuroscience_findings_projection_fibres}, biological aspects are discussed in more detail. 
 
 Projection fibres map images to reference objects and can be defined as matching labelled subgraphs \sidecite{bienenstock_neural_1987, lades_distortion_1993, wiskott_face_1996}.
 Thereby, an image is typically described as a graph of image features. The connections of the graph represent the spatial relationships between the features in the image, and the resulting graph represents the entire image. However, not all pixels usually belong to the same object and subgraph represents an object.
@@ -195,7 +195,7 @@ However, despite these deficits, it is still considered the best error correctio
 Hebbian learning (c.f. \secref{hebbian}), on the other hand, is widely accepted in the fields of neurocomputing, psychology, neurology, and neurobiology \sidecite{widrow_natures_2019}.
 Hebbian learning works well, for example, for topographic mappings \sidecite{kohonen_self-organization_1989, grajski_hebb-type_1990}, implementing neuroplasticity\sidenote{The network's ability to reorganise itself by forming new connections.} \sidecite{montague_spatial_1991}, or recognising non-linear patterns \sidecite{mel_nmda-based_1992}, but also has limitations \cite{anderson_biased_1998}.
 For example, Hebb's learning rule is insufficient as a general rule for time-shifted signals as it requires (almost) synchronous stimuli \sidecite{anderson_biased_1998, rumelhart_learning_1986}.
-Besides Hebbian learning, various other optimisation algorithms are inspired by the human brain. This section summarises these algorithms to provide a comprehensive overview of alternative learning principles. Readers only interested in the proposed framework may skip this section as it is only relevant for future work.
+Besides Hebbian learning, various other optimisation algorithms are inspired by the human brain. These algorithms are summarised in this section to provide a comprehensive overview of alternative learning principles. Readers only interested in the proposed framework may skip this section as it is only relevant for future work.
 
 
 \paragraph{Proxy Objective Functions.} Typical deep learning models are trained by minimising a global objective function \sidecite{prince_understanding_2023}. \emph{Proxy objective functions} \cite{mostafa_deep_2018, marquez_deep_2018, belilovsky_greedy_2019} are objective functions applied to each layer in the model. For example, the loss function of the first layer (i.e. the proxy objective function of the first layer) influences only the trainable parameters of the first layer but not the parameters of the second layer.
