--- a/tex/future_work.tex
+++ b/tex/future_work.tex
@@ -3,7 +3,7 @@ In \secref{intro_motivation} is discussed that the human brain can recognise the
 This capability is absent in current deep learning systems.
 Although deep networks have demonstrated their exceptional capabilities as feature extractors and recent advancements in scaling have brought them to a level where they hold the potential for widespread applicability across various tasks in our everyday lives, these networks still have intrinsic limitations \cite{akhtar_threat_2018, long_survey_2022, madan_when_2022, marcus_deep_2018, smith_using_2022, garcia-martin_estimation_2019, kirkpatrick_overcoming_2017, rosenbloom_defining_2023, mitchell_debate_2023}, and the prospect of overcoming these barriers remains uncertain (c.f. \secref{limitationsDL}).
 
-\secref{neuroscience_findings} identifies important neuroscientific findings responsible for the effectiveness of the biological vision system that does not have these drawbacks of deep networks.
+In \secref{neuroscience_findings}, important neuroscientific findings are identified, responsible for the effectiveness of the biological vision system that does not have these drawbacks of deep networks.
 It is described that the human brain uses lateral connections \sidecite{gilbert_lateral_1990, liang_interactions_2017, stettler_lateral_2002} to build net fragments \sidecite{von_der_malsburg_theory_2022, von_der_malsburg_concerning_2018} that are mapped to reference frames using projection fibres \sidecite{tanigawa_organization_2005, greig_molecular_2013}.
 Such fibres allow object-independent mapping \sidecite{wolfrum_recurrent_2008, fernandes_self-organization_2015}, making the system highly efficient.
 
@@ -21,7 +21,7 @@ At its core, the entire network is based on self-organisation, locality and cell
 Network fragments arise from cells communicating with their spatial neighbours, while projection fibres connect neighbouring cells in \emph{S1} and \emph{S2} and seek consistency with neighbouring fibres.
 In addition, the network incorporates constraints aimed at reducing early commitment and increasing robustness. The iterative process of assembling net fragments and mapping them to object prototypes leads to efficient transformation-invariant feature processing independent of specific objects.
 
-\secref{limitationsDL} pointed out some of the most pressing limitations of deep networks.
+In \secref{limitationsDL}, some of the most pressing limitations of deep networks are pointed out.
 I speculate that the proposed framework can potentially mitigate some of these issues. Properly implemented projection fibres can map net fragments to object prototypes even when transformed. Projection fibres allow to transfer knowledge \sidecite{wolfrum_recurrent_2008, fernandes_self-organization_2015} much more efficiently between objects, could increase computational efficiency and allow better extrapolation of the data distribution. Furthermore, prototypes are stored in \emph{S2} in separate reference frames, thereby reducing the risk of catastrophic forgetting \sidecite{kirkpatrick_overcoming_2017} as newly acquired knowledge cannot overwrite previously learned knowledge.
 
 A significant difference between the proposed system and deep networks lies in the mechanism of building consistency:
@@ -37,8 +37,8 @@ I argue that this is a different way of thinking about artificial learning and p
 
 
 \section{Future Work}
-This thesis proposes a novel vision framework but leaves many questions unanswered and open for future work due to time constraints.
-Consequently, numerous avenues exist for future work to improve the proposed framework.
+In this thesis, a novel vision framework is proposed. 
+However, numerous avenues exist for future work to improve the proposed framework.
 These improvements can focus on various dimensions, such as
 \begin{itemize}
     \item extending the theoretical foundations of the framework with a memory layer or scene interpretation according to the vision outlined in \secref{biologial_inspiration_vision},
@@ -48,7 +48,7 @@ These improvements can focus on various dimensions, such as
     \item and identifying metrics to evaluate the system better.
 \end{itemize}
 
-The following section discusses these improvements and suggests concrete next steps.
+In the following section, these improvements are discussed, and concrete next steps are suggested.
 
 \subsection{Extending Theory}
 The current theoretical foundations are limited to the stages \emph{S0}, \emph{S1}, and \emph{S2}.
@@ -70,7 +70,7 @@ These tasks are discussed in the following.
 \subsubsection{Alternative Cells in \emph{S1}}\seclbl{future_alt_cells}
 In the context of \emph{S1}, individual cells represent distinct features that are localised in a specific spatial location. These cells support each other's neuronal activity. As outlined in \secref{neuroscience_findings_alt_cells}, these cells can contribute to mutually exclusive net fragments. For example, cell $A$ may participate in a fragment with cell $B$ and another fragment with cell $C$, while cell $B$ and $C$ avoid simultaneous activation. This exceeds the functional capacity of cell $A$, and a copy of $A$ is needed to establish separate lateral connections with cell $B$ and $C$.
 
-The \secref{framework_alt_cells} described that alternative cells could be implemented by duplicating the output channels of the weight matrix $\boldsymbol{W}$ of \emph{S1}.
+In \secref{framework_alt_cells}, it is describds that alternative cells could be implemented by duplicating the output channels of the weight matrix $\boldsymbol{W}$ of \emph{S1}.
 Alternative cells contribute to different net fragments and are mutually exclusive.
 Consequently, competition between these alternative cells is required to ensure that only a winning cell can become active and that activity in alternative cells is suppressed\sidenote{Activity can be suppressed by inhibition, as it is already implemented in \emph{S1}.}.
 Well-known competition strategies are winner-take-all competition, providing an external competitive signal, anti-Hebbian learning \sidecite{vogels_inhibitory_2011}, or adapting the activation function of the neurons to enforce a specific activity distribution \sidecite{joshi_rules_2009, teichmann_intrinsic_2015} (c.f. \secref{hebbian}).
@@ -81,7 +81,7 @@ Introducing controlled randomness during the initial phase could increase the st
 Furthermore, Hebbian learning \sidecite{hebb_organization_1949} must be extended to enable forgetting previously learned patterns.
 Currently, each update only increases the weights, which strengthens lateral support.
 However, some updates could inadvertently create incorrect connections between different (alternative) cells.
-The following section describes negative Hebbian learning, which allows forgetting learned connections and seems crucial to implementing alternative cells.
+In the following section, negative Hebbian learning is described, which allows forgetting learned connections and seems crucial to implementing alternative cells.
 This mechanism eliminates the need to carefully prevent false updates during the initial training phase, as erroneous updates can be corrected as soon as the alternative cells are separated enough.
 
 \subsubsection{Negative Hebbian Learning within \emph{S1}}
